@@ -8,6 +8,7 @@ Version : 4.12.4 #XG1
   as well as for starting the ServUO server or another server directly through the .exe.
 - Add DesignStudio
 - Fixed: When importing an image from the clipboard, the selected graphic ID was not retained in the LandTilesTileView.
+- Added functionality to toggle LandTilesTileView background color between white and black upon clicking background.
 
 Version : 4.12.3 #XG1
 - Add Items Image Colors and Update.
@@ -29,8 +30,8 @@ Version : 4.12.3 #XG1
 - Add TileViewContextMenuStrip_Closing To focus on the index.
 - Add Ciloc a Copy Clipboard Only 
 - Add Ciloc Advanced search function that highlights matches and navigates through results.
-- Add AddHtmlLocalized Form created, fills text fields, generates and copies code for HTML localization
-- Add Aboutbox Link and Repository Info
+- Add AddHtmlLocalized Form created, fills text fields, generates and copies code for HTML localization.
+- Add Aboutbox Link and Repository Info.
 
 Version : 4.12.2 #XG1
 - BildFusion Add Sharp , Clipboard, Texture Cut.
